<video> playlist can not advance when playing in background tab https://bugs.webkit.org/show_bug.cgi?id=66978

Reviewed by Darin Adler.

No new tests added because it isn't possible to simulate a background tab in DRT.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::HTMLMediaElement): Set RequirePageConsentToLoadMedia restriction.
(WebCore::HTMLMediaElement::loadInternal): Don't consider page->canStartMedia if it has ever
    allowed a file to load.
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::requirePageConsentToLoadMedia): New.
(WebCore::HTMLMediaElement::removeBehaviorRestriction): New.


Canonical link: https://commits.webkit.org/82823@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93878 268f45cc-cd09-0410-ab3c-d52691b4dbfc